Add display movies feature

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #eaf6f9;
+  background-color: #e4f4f8;
   font-family: Inter, serif;
   min-height: 100vh;
   padding: 0 1.25em;
