Add add-movie feature

--- a/src/components/css/MovieList.css
+++ b/src/components/css/MovieList.css
@@ -3,6 +3,35 @@
   padding: 0;
 }
 
+.own-movie-wrapper {
+  margin-top: 3em;
+}
+
+.own-movie-text {
+  font-size: 1.625rem;
+  text-align: center;
+  margin-bottom: 0.9em;
+}
+
+.own-movie-btn {
+  border: none;
+  background-color: #C1121F;
+  font-size: 1.125rem;
+  font-family: Inter, serif;
+  color: #fff6e5;
+  align-self: center;
+  padding: 0.5em 1.411em;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.own-movie-btn:hover {
+  background-color: #fff6e5;
+  color: #C1121F;
+  padding: 0.412em 1.325em;
+  border: 2px solid #C1121F;
+}
+
 h1 {
   font-size: 1.625rem;
   text-align: center;
@@ -11,7 +40,8 @@ h1 {
 }
 
 .movie-list,
-.movies-wrapper {
+.movies-wrapper,
+.own-movie-wrapper {
   display: flex;
   flex-direction: column;
 }
