--- a/src/components/css/MovieList.css
+++ b/src/components/css/MovieList.css
@@ -8,7 +8,7 @@
 }
 
 .own-movie-text {
-  font-size: 1.625rem;
+  font-size: 1.5rem;
   text-align: center;
   margin-bottom: 0.9em;
 }
@@ -26,7 +26,7 @@
 }
 
 h1 {
-  font-size: 1.625rem;
+  font-size: 1.5rem;
   text-align: center;
   margin-top: 1.75em;
   margin-bottom: 1.25em;
@@ -78,4 +78,36 @@ h1 {
 .no-movies {
   font-size: 1.125rem;
   margin-top: 0.4em;
+}
+
+.or-text {
+  text-align: center;
+  margin: 0.9em 0;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.file-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.325em;
+}
+
+.file-msg {
+  font-size: 1.125rem;
+  margin: 0.2em 0;
+}
+
+.import-btn {
+  border: none;
+  background-color: #FDF0D5;
+  font-size: 1.0625rem;
+  font-family: Inter, serif;
+  border: 2px solid #d8525d;
+  color: #941d27;
+  align-self: center;
+  padding: 0.5em 0.7em;
+  border-radius: 3px;
+  cursor: pointer;
 }
