--- a/src/components/css/SearchMovie.css
+++ b/src/components/css/SearchMovie.css
@@ -114,3 +114,15 @@ button:disabled {
 .search-wrapper:focus-within {
   border-color: #457b9d;
 }
+
+@media (min-width: 830px) {
+  .search-wrapper {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1037px) {
+  .search-wrapper {
+    width: 35%;
+  }
+}
